@@ -32,6 +32,8 @@
 			this.cbShowImagesLibrary = new System.Windows.Forms.CheckBox();
 			this.cbShowImagesDeck = new System.Windows.Forms.CheckBox();
 			this.cbDownload = new System.Windows.Forms.CheckBox();
+			this.label1 = new System.Windows.Forms.Label();
+			this.textBox1 = new System.Windows.Forms.TextBox();
 			this.SuspendLayout();
 			// 
 			// button1
@@ -52,9 +54,9 @@
 			this.cbShowImagesLibrary.DataBindings.Add(new System.Windows.Forms.Binding("Checked", global::Archivist.Properties.Settings.Default, "ShowImagesLibrary", true, System.Windows.Forms.DataSourceUpdateMode.OnPropertyChanged));
 			this.cbShowImagesLibrary.Location = new System.Drawing.Point(12, 35);
 			this.cbShowImagesLibrary.Name = "cbShowImagesLibrary";
-			this.cbShowImagesLibrary.Size = new System.Drawing.Size(306, 17);
+			this.cbShowImagesLibrary.Size = new System.Drawing.Size(317, 17);
 			this.cbShowImagesLibrary.TabIndex = 4;
-			this.cbShowImagesLibrary.Text = "Show Images Library (Restart required, Slows down startup)";
+			this.cbShowImagesLibrary.Text = "Show Images in Library (Restart required, Slows down startup)";
 			this.cbShowImagesLibrary.UseVisualStyleBackColor = true;
 			// 
 			// cbShowImagesDeck
@@ -64,9 +66,9 @@
 			this.cbShowImagesDeck.DataBindings.Add(new System.Windows.Forms.Binding("Checked", global::Archivist.Properties.Settings.Default, "ShowImagesDeck", true, System.Windows.Forms.DataSourceUpdateMode.OnPropertyChanged));
 			this.cbShowImagesDeck.Location = new System.Drawing.Point(12, 12);
 			this.cbShowImagesDeck.Name = "cbShowImagesDeck";
-			this.cbShowImagesDeck.Size = new System.Drawing.Size(119, 17);
+			this.cbShowImagesDeck.Size = new System.Drawing.Size(261, 17);
 			this.cbShowImagesDeck.TabIndex = 3;
-			this.cbShowImagesDeck.Text = "Show Images Deck";
+			this.cbShowImagesDeck.Text = "Show Images in Deck (Newly opened decks only)";
 			this.cbShowImagesDeck.UseVisualStyleBackColor = true;
 			// 
 			// cbDownload
@@ -81,11 +83,36 @@
 			this.cbDownload.Text = "Download Images";
 			this.cbDownload.UseVisualStyleBackColor = true;
 			// 
+			// label1
+			// 
+			this.label1.AutoSize = true;
+			this.label1.Font = new System.Drawing.Font("Microsoft Sans Serif", 8.25F, System.Drawing.FontStyle.Bold, System.Drawing.GraphicsUnit.Point, ((byte)(0)));
+			this.label1.ForeColor = System.Drawing.Color.Red;
+			this.label1.Location = new System.Drawing.Point(13, 154);
+			this.label1.Name = "label1";
+			this.label1.Size = new System.Drawing.Size(54, 13);
+			this.label1.TabIndex = 5;
+			this.label1.Text = "Warning";
+			// 
+			// textBox1
+			// 
+			this.textBox1.BorderStyle = System.Windows.Forms.BorderStyle.None;
+			this.textBox1.Location = new System.Drawing.Point(16, 170);
+			this.textBox1.Multiline = true;
+			this.textBox1.Name = "textBox1";
+			this.textBox1.ReadOnly = true;
+			this.textBox1.Size = new System.Drawing.Size(299, 51);
+			this.textBox1.TabIndex = 6;
+			this.textBox1.Text = "Checking download images and show images in deck/library causes download of all i" +
+    "mages of the whole deck!";
+			// 
 			// OptionDialog
 			// 
 			this.AutoScaleDimensions = new System.Drawing.SizeF(6F, 13F);
 			this.AutoScaleMode = System.Windows.Forms.AutoScaleMode.Font;
 			this.ClientSize = new System.Drawing.Size(327, 262);
+			this.Controls.Add(this.textBox1);
+			this.Controls.Add(this.label1);
 			this.Controls.Add(this.cbShowImagesLibrary);
 			this.Controls.Add(this.cbShowImagesDeck);
 			this.Controls.Add(this.cbDownload);
@@ -107,5 +134,7 @@
 		private System.Windows.Forms.CheckBox cbDownload;
 		private System.Windows.Forms.CheckBox cbShowImagesDeck;
 		private System.Windows.Forms.CheckBox cbShowImagesLibrary;
+		private System.Windows.Forms.Label label1;
+		private System.Windows.Forms.TextBox textBox1;
 	}
 }
